this was mostly generated by cursor